course 100% completed upload

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "vitest --run --reporter verbose",
+    "test-happy": "vitest --run --environment happy-dom",
     "test:watch": "vitest",
     "start": "http-server -c-1"
   },
@@ -12,6 +13,7 @@
   "author": "David Mackey-Ward",
   "license": "ISC",
   "devDependencies": {
+    "happy-dom": "^12.10.3",
     "http-server": "^14.1.0",
     "install": "^0.13.0",
     "npm": "^8.6.0",
